--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ header img {
     height: 80px;
     margin-left: 40px;
 }
+
 body {
     height: 125vh;
     /* background-image: url('img/bck3.jpg'); */
@@ -41,33 +42,34 @@ header li a {
     color: black;
     text-decoration: none;
 }
-.button
-{
-  height: 3rem;
-  padding: 0 2rem;
-  border-radius: 1.5rem;
-  background: linear-gradient(-45deg, #9925ea, #338aff, #9925ea);
-  background-size: 400%;
-  background-position: 90% 0;
-  color: #ffffff;
-  transition: background 0.8s;
+
+.button {
+    height: 3rem;
+    padding: 0 2rem;
+    border-radius: 1.5rem;
+    background: linear-gradient(-45deg, #9925ea, #338aff, #9925ea);
+    background-size: 400%;
+    background-position: 90% 0;
+    color: #ffffff;
+    transition: background 0.8s;
 }
+
 body {
     margin: 0;
     font-family: "Euclid Circular A";
-  }
-  
-  section {
+}
+
+section {
     padding: 30px 15%;
-  }
-  
-  @media (width <= 720px) {
+}
+
+@media (width <=720px) {
     section {
-      padding: 30px 10%;
+        padding: 30px 10%;
     }
-  }
-  
-  .banner {
+}
+
+.banner {
     position: relative;
     display: flex;
     align-items: center;
@@ -77,17 +79,17 @@ body {
     padding-bottom: 72px;
     min-height: 28vw;
     margin-bottom: -146px;
-  }
-  
-  @media (width <= 620px) {
+}
+
+@media (width <=620px) {
     .banner {
-      text-align: center;
-      flex-direction: column-reverse;
-      justify-content: center;
+        text-align: center;
+        flex-direction: column-reverse;
+        justify-content: center;
     }
-  }
-  
-  .banner::before {
+}
+
+.banner::before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -98,87 +100,98 @@ body {
     height: 83%;
     rotate: 0deg;
     background: #0c80d8;
-  }
-  
-  .banner h2 {
+}
+
+.banner h2 {
     white-space: nowrap;
     margin: 0 0 4px;
     font-size: 40px;
     color: rgb(255 255 255 / 96%);
-  }
-  
-  .banner h3 {
+}
+
+.banner h3 {
     font-weight: 400;
     margin: 0;
     color: rgb(255 255 255 / 57%);
-  }
-  
-  @keyframes morph {
+}
+
+@keyframes morph {
+
     0%,
     100% {
-      border-radius: 40% 60% 70% 30% / 40% 40% 60% 50%;
+        border-radius: 40% 60% 70% 30% / 40% 40% 60% 50%;
     }
+
     34% {
-      border-radius: 70% 30% 50% 50% / 30% 30% 70% 70%;
+        border-radius: 70% 30% 50% 50% / 30% 30% 70% 70%;
     }
+
     67% {
-      border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
+        border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
     }
-  }
-  
-  .banner img {
+}
+
+.banner img {
     width: 320px;
     height: 320px;
     object-fit: cover;
     animation: morph 3.5s linear infinite;
-    
-  }
-  body {
+
+}
+
+body {
     align-items: center;
     display: flex;
     justify-content: center;
     height: 100vh;
     margin: 0;
-  }
-  .menu {
+}
+
+.menu {
     background-color: transparent;
     border: none;
     cursor: pointer;
     display: flex;
     padding: 0;
-  }
-  .line {
+}
+
+.line {
     fill: none;
     stroke: black;
     stroke-width: 6;
     transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .line1 {
+        stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line1 {
     stroke-dasharray: 60 207;
     stroke-width: 6;
-  }
-  .line2 {
+}
+
+.line2 {
     stroke-dasharray: 60 60;
     stroke-width: 6;
-  }
-  .line3 {
+}
+
+.line3 {
     stroke-dasharray: 60 207;
     stroke-width: 6;
-  }
-  .opened .line1 {
+}
+
+.opened .line1 {
     stroke-dasharray: 90 207;
     stroke-dashoffset: -134;
     stroke-width: 6;
-  }
-  .opened .line2 {
+}
+
+.opened .line2 {
     stroke-dasharray: 1 60;
     stroke-dashoffset: -30;
     stroke-width: 6;
-  }
-  .opened .line3 {
+}
+
+.opened .line3 {
     stroke-dasharray: 90 207;
     stroke-dashoffset: -134;
     stroke-width: 6;
-  }
-  
+}
