--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ header {
 
 header * {
     display: inline;
-    padding-right: 34px;
+    padding-right: 19px;
 }
 
 header li {
@@ -44,8 +44,8 @@ header li a {
 }
 
 .button {
-    height: 3rem;
-    padding: 0 2rem;
+    height: 2rem;
+    padding: 0 1rem;
     border-radius: 1.5rem;
     background: linear-gradient(-45deg, #9925ea, #338aff, #9925ea);
     background-size: 400%;
@@ -70,14 +70,15 @@ section {
 }
 
 .banner {
-    position: relative;
+    /* position: relative; */
+    margin-top: 20px;
     display: flex;
     align-items: center;
     gap: 167px;
     justify-content: space-between;
     /* padding-top: 100px; */
     padding-bottom: 72px;
-    min-height: 28vw;
+    height: 200px;
     margin-bottom: -146px;
 }
 
@@ -93,11 +94,11 @@ section {
     content: "";
     position: absolute;
     z-index: -1;
-    top: 50%;
+    top: 30%;
     left: 50%;
     translate: -50% -50%;
     width: 200%;
-    height: 83%;
+    height: 48%;
     rotate: 0deg;
     background: #0c80d8;
 }
@@ -132,8 +133,8 @@ section {
 }
 
 .banner img {
-    width: 320px;
-    height: 320px;
+    width: 385px;
+    height: 263px;
     object-fit: cover;
     animation: morph 3.5s linear infinite;
 
