--- a/Style.css
+++ b/Style.css
@@ -12,19 +12,29 @@
 header,
 section {
   overflow-x: hidden;
-  /* height: 30%; */
 }
 header img {
     height: 80px;
     margin-left: -110px;
 }
-<<<<<<< HEAD
-:root {
-  /* --Sniglet-font: "Sniglet", cursive;  */
-   /* --Rubik: "Rubik", cursive; 
+.section-0{
+  background-color: #aff2faca;
+  padding: 140px;
+  text-align: center;
+  width: 100%;
+}
+.section-0 img{
+  height: 300px;
+  width: 360px;
+  left: 70%;
+}
+
+/* :root {
+   --Sniglet-font: "Sniglet", cursive;  
+   --Rubik: "Rubik", cursive; 
    --Patua: "Patua One", cursive;
-  --Lobster: "lobster", cursive; */
-=======
+  --Lobster: "lobster", cursive; 
+} */
 
 .container-hero
 {
@@ -48,7 +58,6 @@ header img {
   --Rubik: "Rubik", cursive;
   --Patua: "Patua One", cursive;
   --Lobster: "lobster", cursive;
->>>>>>> 2025d1ee22fc646e884286365c68bc662f1cb679
   --light-black: #3e4146db;
   --bggradient: linear-gradient(to bottom, #ffffff, #28c7f7);
   --light-gray: rgba(0, 0, 0, 0.877);
@@ -188,7 +197,8 @@ header .container .col-md-7 p {
 .cover {
   width: 100%;
   height: 55vmin;
-  background: url("img/");
+  /* background: url("img/"); */
+  background-color: grey;
   background-position: -24rem -19rem;
   background-size: 150%;
   position: relative;
@@ -316,7 +326,7 @@ header .container .col-md-7 p {
 }
 
 .section-3 .desktop {
-  background: rgb(255, 255, 255);
+  background: rgba(140, 236, 255, 0.903);
   display: inline-block;
   border-radius: 3em;
   padding: 2vmin 4.5vmin;
