--- a/gallery.css
+++ b/gallery.css
@@ -1,13 +1,17 @@
-*{
-    box-sizing: border-box;
-    margin: 0%;
-    padding: 0%;
-}
-body{
-    font-family: 'Times New Roman', Times, serif;
-    --color1:var(--color1);
-    --color2:#bbb0b0;
 
+@import url("https://fonts.googleapis.com/css?family=Acme|Lobster|Patua+One|Rubik|Sniglet");
+* {
+  box-sizing: border-box;
+}
+
+header,
+section {
+  overflow-x: hidden;
+  /* height: 30%; */
+}
+header img {
+    height: 80px;
+    margin-left: -110px;
 }
 .heading{
     width: 100;
@@ -22,22 +26,148 @@ body{
 }
 .text{
     display: inline block;
-    position: relative;
+    
     
 
 }
-.nav-bar{
+.container-hero
+{
+  background-color: lightblue;
+  padding-left: 3%;
+  text-align: center;
+}
+
+#login-btn
+{
+  padding: 15px;
+}
+
+.navbar-collapse
+{
+  padding: 0% 3%;
+}
+
+
+header a {
+  font-family: var(--Sniglet-font);
+  font-size: 0.9em;
+  color: rgb(28, 0, 140);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #d1d1d1;
+  min-width: 160px;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #3fa9ff;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+header .nav-item:last-child {
+  padding-right: 10.5em;
+}
+
+header .nav-item {
+  padding: 0.9em;
+}
+
+header .navbar-brand {
+  padding-left: 8rem;
+}
+
+header .nav-link:hover {
+  color: black;
+}
+
+header .row .col-md-7 {
+  padding: 22vmin 1vmin;
+  padding-bottom: 35vmin;
+}
+
+header .row .col-md-5 {
+  padding: 4.2vmin 1vmin;
+}
+
+header .row .col-md-5 img {
+  width: 90%;
+}
+
+header {
+  background: #025fff;
+  /* fallback for old browsers */
+  background: var(--bggradient);
+}
+
+header .container .col-md-7 {
+  font-family: "Rubik", sans-serif;
+}
+
+header .container .col-md-7 h6 {
+  padding: 1vmin;
+  letter-spacing: 4px;
+}
+
+header .container .col-md-7 h1 {
+  font-size: 8.5vmin;
+  font-weight: bold;
+  padding: 0.1em 0em;
+}
+
+header .container .col-md-7 p {
+  padding: 1vmin 5vmin;
+}
+
+.primary-btn {
+  border-radius: 30px;
+  font-weight: bold;
+}
+.section-1 {
+    padding: 6vmin 0vmin;
+  }
+
+body{
+    font-style: normal;
+}
+.text-light{
+    color: #28c7f7 !important;
+}
+.container-fluid-0{
+    right: 10px;
+    top: 50px;
+    width: 70px;
+    height: 70px;
+}
+.nav-item{
     width: 100;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items:right;
     list-style: none;
     position: relative;
-    background-color: var(--color2);
+    background-color: white;
     padding: 12PX 20PX;
     --color2:#bbb0b0;
+float:left;
+left: 35%;
 
-
+}
+.login-btn{
+    right: 0%;
 }
 .back-link {
     display: flex;
@@ -165,6 +295,7 @@ transition: all 0.2s;
 .gallery{
     display: flex;
   justify-content: center;
+  top: 40px;
  
 }
 .gallery-item{
@@ -180,3 +311,7 @@ p{
     font-size: x-large;
     display: block;
 }
+.border-radius {
+    border-radius: 340px;
+    width: 60%;
+  }
