--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 body{
     font-family: sans-serif;
     margin: 0;
-    background-color: whitesmoke;
+    background-color: white;
     overflow-x: hidden;
 }
 .leaderboard{
