--- a/leaderboard.css
+++ b/leaderboard.css
@@ -3,6 +3,7 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
+    
   }
   body{
     font-family: sans-serif;
@@ -11,72 +12,6 @@
   }
 
   
-  nav .logo{
-    color: white;
-    font-size: 33px;
-    font-weight: bold;
-    line-height: 70px;
-    padding-left: 110px;
-  }
-  nav{
-    height: 70px;
-    background: #063247;
-    box-shadow: 0 3px 15px rgba(0,0,0,.4);
-  }
-  nav ul{
-    float: right;
-    margin-right: 30px;
-  }
-  nav ul li{
-    display: inline-block;
-  }
-  nav ul li a{
-    color: white;
-    display: block;
-    padding: 0 15px;
-    line-height: 70px;
-    font-size: 20px;
-    background: #063247;
-    transition: .5s;
-  }
-  nav ul li a:hover,
-  nav ul li a.active{
-    color: #23dbdb;
-  }
-  nav ul ul{
-    position: absolute;
-    top: 85px;
-    border-top: 3px solid #23dbdb;
-    opacity: 0;
-    visibility: hidden;
-  }
-  nav ul li:hover > ul{
-    top: 70px;
-    opacity: 1;
-    visibility: visible;
-    transition: .3s linear;
-  }
-  nav ul ul li{
-    width: 150px;
-    display: list-item;
-    position: relative;
-    border: 1px solid #042331;
-    border-top: none;
-  }
-  nav ul ul li a{
-    line-height: 50px;
-  }
-  nav ul ul ul{
-    border-top: none;
-  }
-  nav ul ul ul li{
-    position: relative;
-    top: -70px;
-    left: 150px;
-  }
-  nav ul ul li a i{
-    margin-left: 45px;
-  }
   section{
     background: url(bg.jpeg);
     background-position: center;
@@ -87,7 +22,7 @@
     font-family: sans-serif;
     margin: 0;
     background-color: whitesmoke;
-    background-image: linear-gradient(45deg, #c8d1ec, rgb(220, 220, 240));
+    
     overflow-x: hidden;
     
     font-family: 'Poppins', sans-serif;
@@ -206,13 +141,167 @@ tbody tr:nth-child(odd){
     color: #cd7f32;
     font-weight: 800;
 }
-
-
-#main {
-    transition: margin-left .5s;
-    padding: 16px;
-    margin-left: 300px;
+header,
+section {
+  overflow-x: hidden;
 }
+header img {
+    height: 80px;
+    margin-left: -110px;
+}
+
+#login-btn
+{
+  padding: 15px;
+  /* padding-top: 2%; */
+  margin-top: 12px;
+  
+}
+
+
+header a {
+  font-family: var(--Sniglet-font);
+  font-size: 0.9em;
+  color: rgb(28, 0, 140);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #2f7cc4;
+  min-width: 160px;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #3fa9ff;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+footer {
+  background: rgba(0, 0, 0, 0.815);
+  overflow-x: hidden;
+  padding: 14vmin 18vmin;
+}
+
+footer p > span {
+  color: #ff512f;
+}
+
+footer input {
+  border: none !important;
+}
+
+footer input::placeholder {
+  color: rgb(255, 255, 255) !important;
+}
+
+footer .input-group .input-group-text {
+  background: var(--bggradient);
+  border: none;
+}
+
+footer .column i {
+  color: #dd2476;
+}
+
+/* It is Adjacent sibling combinator */
+
+footer .column i + i {
+  padding: 0 0.5em;
+}
+
+
+
+
+header,
+section {
+  overflow-x: hidden;
+}
+header img {
+    height: 80px;
+    margin-left: -110px;
+}
+header a {
+    font-family: var(--Sniglet-font);
+    font-size: 0.9em;
+    color: rgb(28, 0, 140);
+  }
+
+
+header .nav-item:last-child {
+  padding-right: 10.5em;
+}
+
+header .nav-item {
+  padding: 0.9em;
+}
+
+header .navbar-brand {
+  padding-left: 8rem;
+}
+
+header .nav-link:hover {
+  color: black;
+}
+
+header .row .col-md-7 {
+  padding: 22vmin 1vmin;
+  padding-bottom: 35vmin;
+}
+
+header .row .col-md-5 {
+  padding: 4.2vmin 1vmin;
+}
+
+header .row .col-md-5 img {
+  width: 90%;
+}
+
+header {
+  background: #025fff;
+  /* fallback for old browsers */
+  background: var(--bggradient);
+}
+
+header .container .col-md-7 {
+  font-family: "Rubik", sans-serif;
+}
+
+header .container .col-md-7 h6 {
+  padding: 1vmin;
+  letter-spacing: 4px;
+}
+
+header .container .col-md-7 h1 {
+  font-size: 8.5vmin;
+  font-weight: bold;
+  padding: 0.1em 0em;
+}
+
+header .container .col-md-7 p {
+  padding: 1vmin 5vmin;
+}
+
+
+.navbar-collapse
+{
+  padding: 0% 3%;
+}
+
+
 
 @media(max-width:860px){
     .leaderboard{
@@ -232,6 +321,6 @@ tbody tr:nth-child(odd){
         overflow-x: scroll;
 
     }
-
-
+   
 }
+
