--- a/leaderboard.css
+++ b/leaderboard.css
@@ -6,8 +6,8 @@
     
   }
   body{
-    font-family: sans-serif;
-    overflow: hidden;
+    font-family: Montserrat;
+    /* overflow: hidden; */
     user-select: none;
   }
 
@@ -86,6 +86,7 @@ table{
     margin-right: auto;
     margin-left: auto;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 20%;
 }
 table thead{
     opacity: .8;
@@ -510,11 +511,11 @@ footer .column i + i {
   padding: 0 0.5em;
 }
 
-.sticky {
+/* .sticky {
 
   top: 0;
   width: 100%;
   background: white;
   z-index: 9999;
   transition: all 1.5s ease;
-}
+} */
