Updated Header and Footer

--- a/eventstyle.css
+++ b/eventstyle.css
@@ -53,7 +53,7 @@ header a {
 }
 
 .nav-itemsub{
-    margin-left: 100px;
+    margin-left: 250px;
     margin-bottom: 50px;
 }
 header .nav-item:last-child {
@@ -115,47 +115,51 @@ header .container .col-md-7 p {
 
 
 footer {
-  background: rgba(0, 0, 0, 0.815);
-  overflow-x: hidden;
-  padding: 14vmin 18vmin;
-}
-
-footer p > span {
-  color: #ff512f;
-}
-
-footer input {
-  border: none !important;
-}
-
-footer input::placeholder {
-  color: rgb(255, 255, 255) !important;
-}
-
-footer .input-group .input-group-text {
-  background: var(--bggradient);
-  border: none;
-}
-
-footer .column i {
-  color: #dd2476;
-}
-
-/* It is Adjacent sibling combinator */
-
-footer .column i + i {
-  padding: 0 0.5em;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgba(255, 255, 255, 85%);
-  z-index: 9999;
-  transition: all 1.5s ease;
-}
-
+    background: rgba(0, 0, 0, 0.815);
+    overflow-x: hidden;
+    padding: 14vmin 18vmin;
+  }
+  
+  footer p > span {
+    color: #ff512f;
+  }
+  
+  footer input {
+    border: none !important;
+  }
+  
+  footer input::placeholder {
+    color: rgb(255, 255, 255) !important;
+  }
+  
+  footer .input-group .input-group-text {
+    background: var(--bggradient);
+    border: none;
+  }
+  
+  footer .column i {
+    color: #dd2476;
+  }
+  
+  footer .column i + i {
+    padding: 0 0.5em;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 85%);
+    z-index: 9999;
+    transition: all 1.5s ease;
+  }
+  
+  body{
+      font-family: Montserrat;
+  }
+  .text-light{
+      color: #ffffff !important;
+  }
 
 
 
