--- a/leaderboard.css
+++ b/leaderboard.css
@@ -24,7 +24,7 @@
     background: url(bg.jpeg);
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    height: 50vh;
   }
   body{
     font-family: sans-serif;
@@ -68,7 +68,7 @@
     padding: 1vh;
     color: black;
     transform: translateY(-5em);
-    margin-left: 40%;
+    margin-left: 35%;
 }
 .search{
     border-radius: 5px;
@@ -309,6 +309,128 @@ header .container .col-md-7 p {
 }
 
 
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500&display=swap");
+
+.container {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-gap: 8px;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  width: 10vh;
+  background-color: #f5f5f5;
+  font-family:'Times New Roman', Times, serif;
+}
+
+.card {
+  background-color: #7293c5;
+  height: 20rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.7);
+  color: rgb(14, 13, 13);
+}
+
+.card__name {
+  margin-top: 10px;
+  font-size: 1em;
+}
+
+.card__image {
+  height: 160px;
+  width: 160px;
+  border-radius: 50%;
+  border: 5px solid #51426e;
+  margin-top: 20px;
+  box-shadow: 0 10px 50px #5831e6;
+}
+
+
+.draw-border {
+  box-shadow: inset 0 0 0 4px #58cdd1;
+  color: #58afd1;
+  -webkit-transition: color 0.25s 0.0833333333s;
+  transition: color 0.25s 0.0833333333s;
+  position: relative;
+}
+
+.draw-border::before,
+.draw-border::after {
+  border: 0 solid transparent;
+  box-sizing: border-box;
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  width: 0rem;
+  height: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.draw-border::before {
+  border-bottom-width: 4px;
+  border-left-width: 4px;
+}
+
+.draw-border::after {
+  border-top-width: 4px;
+  border-right-width: 4px;
+}
+
+.draw-border:hover {
+  color: #ffe593;
+}
+
+.draw-border:hover::before,
+.draw-border:hover::after {
+  border-color: #eb196e;
+  -webkit-transition: border-color 0s, width 0.25s, height 0.25s;
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+
+.draw-border:hover::before {
+  -webkit-transition-delay: 0s, 0s, 0.25s;
+  transition-delay: 0s, 0s, 0.25s;
+}
+
+.draw-border:hover::after {
+  -webkit-transition-delay: 0s, 0.25s, 0s;
+  transition-delay: 0s, 0.25s, 0s;
+}
+
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  font: 700 1.2rem 'Roboto Slab', sans-serif;
+  padding: 0.75em 2em;
+  letter-spacing: 0.05rem;
+  margin: 1em;
+  width: 13rem;
+}
+
+.btn:focus {
+  outline: 2px dotted #55d7dc;
+}
+
+
+
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  font-size: 1.2em;
+}
+
+
 
 @media(max-width:860px){
     .leaderboard{
@@ -328,7 +450,10 @@ header .container .col-md-7 p {
         overflow-x: scroll;
 
     }
-   
+
+    .container{
+      display: initial;
+    }
 }
 
 
