--- a/login.css
+++ b/login.css
@@ -178,7 +178,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg,  rgb(102, 179, 209) 100%, #078bf8 0%);
+  background-image: linear-gradient(-45deg,  #37bbe454 100%, #37bbe454 0%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
@@ -211,7 +211,7 @@ form.sign-in-form {
 }
 
 .panel .content {
-  color: #fff;
+  color: #000000;
   transition: transform 0.9s ease-in-out;
   transition-delay: 0.6s;
 }
