--- a/style.css
+++ b/style.css
@@ -12,9 +12,14 @@ header img {
     height: 80px;
     margin-left: -110px;
 }
+
+.container{
+  width: 100%;
+}
 .section-0{
   background-color: #37bbe454;
-  padding: 140px;
+  margin-top: 110px;
+  /* padding: 140px; */
   text-align: center;
   width: 100%;
   /* margin-top: 10px; */
@@ -24,9 +29,7 @@ header img {
   width: 360px;
   /* left: 70%; */
 }
-.bannertext{
-  margin-top: 5px;
-}
+
 
 .container-hero
 {
@@ -110,13 +113,29 @@ header a {
   align-items: center;
  
 }
+
+.bannertext{
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.bannerimage{
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.container-fluid
+{
+  position: absolute;
+  z-index: 1;
+}
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #2f7cc4;
+  background-color: whitesmoke;
   min-width: 160px;
   box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  
 }
 
 .dropdown-content a {
@@ -154,7 +173,7 @@ header .nav-link:hover {
 
 /* here */
 
-header .row .col-md-7 {
+ header .row .col-md-7 {
   padding: 22vmin 1vmin;
   padding-bottom: 35vmin;
 }
@@ -180,7 +199,7 @@ header .container .col-md-7 h1 {
 
 header .container .col-md-7 p {
   padding: 1vmin 5vmin;
-}
+} 
 
 .primary-btn {
   border-radius: 30px;
@@ -409,7 +428,6 @@ footer .column i + i {
 
 .sticky {
   position: fixed;
-  top: 0;
   width: 100%;
   background: rgba(255, 255, 255, 85%);
   z-index: 9999;
@@ -418,6 +436,8 @@ footer .column i + i {
 
 body{
     font-family: Montserrat;
+    width: 100%;
+    padding: 0% 0%;
 }
 .text-light{
     color: #ffffff !important;
