--- a/about.css
+++ b/about.css
@@ -8,7 +8,6 @@ body{
   h3{
       color:#45c7fb
     }
-<<<<<<< HEAD
   
   hr{
     border-style: none;
@@ -20,60 +19,26 @@ body{
   @import url("");
 * {
 box-sizing: border-box;
-=======
-    h1{
-      color:#47aaed
-    }
-    h3{
-        color:#45c7fb
-      }
-    
-    hr{
-      border-style: none;
-      border-top-style: dotted;
-      border-color: grey;
-      border-width: 5px;
-      width:5%;
-    }
-    @import url("");
-* {
-  box-sizing: border-box;
->>>>>>> 6ac07fbc337d8f13214d2849ef3ae53d1819ca0e
 }
 
 header,
 section {
-<<<<<<< HEAD
 overflow-x: hidden;
 }
 header img {
   height: 80px;
   margin-left: -110px;
-=======
-  overflow-x: hidden;
-}
-header img {
-    height: 80px;
-    margin-left: -110px;
->>>>>>> 6ac07fbc337d8f13214d2849ef3ae53d1819ca0e
 }
 
 #login-btn
 {
-<<<<<<< HEAD
 padding: 15px;
 /* padding-top: 2%; */
 margin-top: 12px;
-=======
-  padding: 15px;
-  /* padding-top: 2%; */
-  margin-top: 12px;
->>>>>>> 6ac07fbc337d8f13214d2849ef3ae53d1819ca0e
 }
 
 .navbar-collapse
 {
-<<<<<<< HEAD
 padding: 0% 3%;
 }
 
@@ -181,112 +146,59 @@ font-family: Montserrat;
 /* text-align: center; */
 margin: 5%;
 }
-=======
-  padding: 0% 3%;
-}
 
-header a {
-  font-family: var(--Sniglet-font);
-  font-size: 0.9em;
-  color: rgb(28, 0, 140);
+.border-radius{
+  border-radius: 340px;
+  width: 60%;
 }
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #2f7cc4;
-  min-width: 160px;
-  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #3fa9ff;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-header .nav-item:last-child {
-  padding-right: 10.5em;
-}
-
-header .nav-item {
-  padding: 0.9em;
-}
-
-header .navbar-brand {
-  padding-left: 8rem;
-}
-
-header .nav-link:hover {
-  color: black;
-}
-.primary-btn {
+.primary-btn{
   border-radius: 30px;
   font-weight: bold;
 }
 
-footer {
-  background: rgba(0, 0, 0, 0.815);
-  overflow-x: hidden;
-  padding: 14vmin 18vmin;
+header .container .col-md-7 p {
+  font-size: 8.5vmin;
+  font-weight: bold;
+  padding: 0.1em 0em;
 }
 
-footer p > span {
-  color: #ff512f;
+header .container .col-md-7 {
+  font-family: "Rubik", sans-serif;
 }
 
-footer input {
-  border: none !important;
+header .container .col-md-7 h6 {
+  padding: 1vmin;
+  letter-spacing: 4px;
+}
+header .row .col-md-7 {
+  padding: 22vmin 1vmin;
+  padding-bottom: 35vmin;
 }
 
-footer input::placeholder {
-  color: rgb(255, 255, 255) !important;
+header .row .col-md-5 {
+  padding: 4.2vmin 1vmin;
 }
 
-footer .input-group .input-group-text {
+header .row .col-md-5 img {
+  width: 90%;
+}
+
+header {
+  background: #ff512f;
+  /* fallback for old browsers */
   background: var(--bggradient);
-  border: none;
 }
-
-footer .column i {
-  color: #dd2476;
-}
-
-footer .column i + i {
-  padding: 0 0.5em;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
+/* .aboutsection{
+  display: inline;
+  background-color: #37bbe454;
+  margin-top: 110px;
+  text-align: center;
   width: 100%;
-  background: rgba(255, 255, 255, 85%);
-  z-index: 9999;
-  transition: all 1.5s ease;
 }
-.aboutsection{
-  margin: 5%;
-}
-
-.imgofabout{
+.aboutsection img{
   height: 300px;
   width: 360px;
 }
-body{
-  font-family: Montserrat;
-}
-.bottompara{
-  /* text-align: center; */
-  margin: 5%;
-}
->>>>>>> 6ac07fbc337d8f13214d2849ef3ae53d1819ca0e
+.container{
+  width: 100%;
+} */
