--- a/eventstyle.css
+++ b/eventstyle.css
@@ -5,7 +5,7 @@
 
 header,
 section {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* height: 30%; */
 }
 header img {
@@ -23,7 +23,7 @@ header a {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #22c1e9;
+  background-color: #808080;
   min-width: 160px;
   box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -79,6 +79,7 @@ header {
   background: #025fff;
   /* fallback for old browsers */
   background: var(--bggradient);
+  margin-bottom: 5%;
 }
 
 header .container .col-md-7 {
@@ -148,6 +149,7 @@ footer {
   
   body{
       font-family: Montserrat;
+      /* margin-bottom: 4%; */
   }
   .text-light{
       color: #ffffff !important;
@@ -159,7 +161,7 @@ footer {
 
 
 .eventbody {
-    padding-top: 20px;
+    padding-top: 10px;
   }
   
   .card-deck {
@@ -193,7 +195,12 @@ footer {
     }
   }
 
-  
+  .card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    margin-bottom: 5%;
+}
 
 
   
