--- a/eventstyle.css
+++ b/eventstyle.css
@@ -1,16 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Acme|Lobster|Patua+One|Rubik|Sniglet");
+
 * {
   box-sizing: border-box;
 }
 
-header,
+/* header,
 section {
-  /* overflow-x: hidden; */
-  /* height: 30%; */
-}
+  overflow-x: hidden;
+  height: 30%;
+} */
+
 header img {
-    height: 80px;
-    margin-left: -110px;
+  height: 80px;
+  margin-left: -110px;
 }
 
 
@@ -44,10 +46,11 @@ header a {
   display: block;
 }
 
-.nav-itemsub{
-    margin-left: 250px;
-    margin-bottom: 50px;
+.nav-itemsub {
+  margin-left: 250px;
+  margin-bottom: 50px;
 }
+
 header .nav-item:last-child {
   padding-right: 10.5em;
 }
@@ -108,103 +111,91 @@ header .container .col-md-7 p {
 
 
 footer {
-    background: rgba(0, 0, 0, 0.815);
-    overflow-x: hidden;
-    padding: 14vmin 18vmin;
-  }
-  
-  footer p > span {
-    color: #ff512f;
-  }
-  
-  footer input {
-    border: none !important;
-  }
-  
-  footer input::placeholder {
-    color: rgb(255, 255, 255) !important;
-  }
-  
-  footer .input-group .input-group-text {
-    background: var(--bggradient);
-    border: none;
-  }
-  
-  footer .column i {
-    color: #dd2476;
-  }
-  
-  footer .column i + i {
-    padding: 0 0.5em;
-  }
-  
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: rgba(255, 255, 255, 85%);
-    z-index: 9999;
-    transition: all 1.5s ease;
-  }
-  
-  body{
-      font-family: Montserrat;
-      /* margin-bottom: 4%; */
-  }
-  .text-light{
-      color: #ffffff !important;
-  }
-
-
-
-
-
-
-.eventbody {
-    padding-top: 10px;
-  }
-  
-  .card-deck {
-    margin: 0 -15px;
-    justify-content: space-between;
-  }
-  
-  .card-deck .card {
-    margin: 0 0 1rem;
-  }
-  
-  @media (min-width: 576px) and (max-width: 767.98px) {
-    .card-deck .card {
-      -ms-flex: 0 0 48.7%;
-      flex: 0 0 48.7%;
-    }
-  }
-  
-  @media (min-width: 768px) and (max-width: 991.98px) {
-    .card-deck .card {
-      -ms-flex: 0 0 32%;
-      flex: 0 0 32%;
-    }
-  }
-  
-  @media (min-width: 992px)
-  {
-    .card-deck .card {
-      -ms-flex: 0 0 24%;
-      flex: 0 0 24%;
-    }
-  }
-
-  .card-body {
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    padding: 1.25rem;
-    margin-bottom: 5%;
+  background: rgba(0, 0, 0, 0.815);
+  overflow-x: hidden;
+  padding: 14vmin 18vmin;
 }
 
+footer p>span {
+  color: #ff512f;
+}
 
-  
+footer input {
+  border: none !important;
+}
 
+footer input::placeholder {
+  color: rgb(255, 255, 255) !important;
+}
 
+footer .input-group .input-group-text {
+  background: var(--bggradient);
+  border: none;
+}
 
-  
+footer .column i {
+  color: #dd2476;
+}
+
+footer .column i+i {
+  padding: 0 0.5em;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 85%);
+  z-index: 9999;
+  transition: all 1.5s ease;
+}
+
+body {
+  font-family: Montserrat;
+  /* margin-bottom: 4%; */
+}
+
+.text-light {
+  color: #ffffff !important;
+}
+
+.eventbody {
+  padding-top: 10px;
+}
+
+.card-deck {
+  margin: 0 -15px;
+  justify-content: space-between;
+}
+
+.card-deck .card {
+  margin: 0 0 1rem;
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .card-deck .card {
+    -ms-flex: 0 0 48.7%;
+    flex: 0 0 48.7%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .card-deck .card {
+    -ms-flex: 0 0 32%;
+    flex: 0 0 32%;
+  }
+}
+
+@media (min-width: 992px) {
+  .card-deck .card {
+    -ms-flex: 0 0 24%;
+    flex: 0 0 24%;
+  }
+}
+
+.card-body {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+  margin-bottom: 5%;
+}
